--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+a {
+    text-decoration: none !important;
+    color: black !important;
+    font-weight: bold !important;
+}
